# org-threat-surface

./: CSV_VISUALIZER_GUIDE.md  CSV_VISUALIZER_UPDATE.md  DEPLOYMENT.md  Dockerfile  INDEX.md  QUICK_START.md  README.md  UI_README.md  UI_SUMMARY.md  agent_simplified.py  docker-compose.yml  example_simplified.py  index.html  misalignment_potential.csv  requirements.txt  start_ui.sh  sweep_summary.csv  test_organization.py  web_app.py
Simulations/: Makefile  README.md  app.py  codebook.csv  coverage_by_sector.csv  coverage_by_year.csv  dashboard.html  dashboard_server.py  flake.nix  main.py  master_SP500_TMT.dta  pyproject.toml  requirements.txt  requirements_ui.txt  simulation.py  snapshot.csv  temp_export.xlsx
Simulations/results/: misalignment_potential.csv  sweep_summary.csv
static/: style.css
templates/: index.html  organization.html
