[project]
name = "simulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.7",
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "scipy>=1.10",
    "flask>=3.0",
    "flask-cors>=4.0",
]
